force-app/main/default/objects/Amenities_Imperatives__c/Amenities_Imperatives__c.object-meta.xml
<CustomObject>
    <description>GS
Business Unit: City Expansion
Purpose: Has metadata for the Expansion City Object.</description>
    <label>Amenity/Imperative</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Amenity/Imperative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amenities/Imperatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>