force-app/main/default/objects/Amenities_Imperatives__c/fields/Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Notes__c</fullName>
    <description>GS
Business Unit: City Expansion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Notes</label>
    <type>TextArea</type>
</CustomField>