force-app/main/default/objects/Amenities_Imperatives__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>GS
Business Unit: City Expansion</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>