force-app/main/default/objects/Amenities_Imperatives__c/fields/Expansion_City__c.field-meta.xml
<CustomField>
    <fullName>Expansion_City__c</fullName>
    <description>GS
Business Unit: City Expansion
Purpose: Ties Expansion City to its metadata.</description>
    <label>Expansion City</label>
    <referenceTo>Expansion_City__c</referenceTo>
    <relationshipName>ECR_Metadatas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>