force-app/main/default/objects/Amenities_Imperatives__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>GS
Business Unit: City Expansion</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amenity</fullName>
            </value>
            <value>
                <fullName>Imperative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>